# docs

./: 404.html  CNAME  index.html  mkdocs.yml  openapi-ingest.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html  swagger-c95bfeec.html
channels/slack/: index.html
channels/smpp/: index.html
channels/smtp/: index.html
channels/telegram/: index.html
channels/wa_business/: index.html
components/: index.html
configuration/: index.html
docs/: api.md  components.md  configuration.md  credentials.md  index.md  notificox.md  pipeline.md  pipelines.md  quick-start.md  recipient.md  template.md  templates.md
docs/channels/: slack.md  smpp.md  smtp.md  telegram.md  wa_business.md
docs/plugins/: core.md  gotify.md  ntfy.md  pushover.md  slack.md  smpp.md  smtp.md  telegram.md  waba.md
notificox/: index.html
overrides/partials/integrations/analytics/: custom.html
pipeline/: index.html
pipelines/: index.html
plugins/core/: index.html
plugins/gotify/: index.html
plugins/ntfy/: index.html
plugins/pushover/: index.html
plugins/slack/: index.html
plugins/smpp/: index.html
plugins/smtp/: index.html
plugins/subscriptions/: index.html
plugins/telegram/: index.html
plugins/wa_business/: index.html
plugins/waba/: index.html
quick-start/: index.html
recipient/: index.html
search/: search_index.json
template/: index.html
templates/: index.html
