[tool.poetry]
name = "notifico-docs"
version = "0.1.0"
description = ""
authors = ["Alexander Shishenko <alex@shishenko.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.42"
mkdocs-swagger-ui-tag = "^0.6.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
